<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="detail_name">Detail Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming_event">Upcoming Events</string>
    <string name="title_finished_event">Finished Events</string>
    <string name="tv_empty">Event yang kamu cari belum ada nih :(</string>
    <string name="searchbar_hint">Masukkan nama event</string>
    <string name="tv_upcoming_event">Ini contoh Text dengan judul Ini contoh Text dengan judul Ini contoh Text dengan judul</string>
    <string name="tv_quota">Sisa Kuota: </string>
    <string name="tv_date">2024 15 10 01:00:00</string>
    <string name="tv_info">Informasi:</string>
    <string name="tv_owner_name">Alvano Hastagina</string>
    <string name="tv_detail_event">Ini contoh Text dengan detail Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_register">Register</string>
</resources>